# Data-Augment-and-Train-Yolo

./: .gitignore  CMakeLists.txt  README.md  package.xml
data/: download_link.md
data_yolo/: images_names_to_txt.py  train_test_split.py
doc/: installation.md
include/: detect_object_from_cloud.h
include/my_pcl/: pcl_advanced.h
launch/: main.launch  open_realsense.md  rviz_for_rgbd_point_cloud.launch  rviz_for_xtion.launch
lib_cpp_h/: detect_object_from_cloud.h
lib_python/: detect_object_from_rgbd.py  lib_cam_calib.py  lib_cloud.py
model/: download_link.md
python_tools/: images2video.py
results/: plot_loss_from_txt.py
src1_data_aug/: create_new_images.ipynb
src1_data_aug/.ipynb_checkpoints/: create_new_images-checkpoint.ipynb
src1_data_aug/mylib/: display.py  (+1 more)
src2_train_yolo/: README_for_darknet.md  bash_detect_images_in_txt.py  my-train.data  mynotes_darknet.md  yolov3-my-test.cfg  yolov3-my-train.cfg
src_collect_data/: CMakeLists.txt  n0_fake_rgbd_image_publisher.py  n1_main_add_label_to_image.py
src_cpp/: CMakeLists.txt  detect_object_from_cloud.cpp
src_cpp/my_pcl/: pcl_advanced.cpp
src_data_aug/: README.md  create_new_images.ipynb  n2_data_aug.py
src_main/: CMakeLists.txt  n0_fake_rgbd_image_publisher.py  n1_main_add_label_to_image.py  n2_detect_object_from_pc.cpp  node_detect_object_from_cloud.cpp  sub_and_save_rgb_and_depth_images.py
src_python/: detect_object_from_rgbd.py  lib_cam_calib.py
test/: filt_cloud_and_display.py  sub_cloud_and_display_by_open3d.py  test_draw_box.py  test_rgbd_odometry.py  test_rgbimg_to_cloud.py
(+6 files in other folders)
